# packetsniffing

./: ALM_Apriori.py  README.md  adding-contacts-pcap.csv  adding-contacts-pcap.html  baseline-gplay-android.csv  baseline-pacp.html  baseline-vanilla-android.csv  csvfrommessages.csv  csvfrommessages4.csv  csvfrommessageswithoutlocation.csv  csvfromregistration.csv  excelfrommessages.csv  excelfrompcap.csv  excelfromregistration.csv  livecapture.csv  livecapture.py  livecapture_py  map.html  messaging-pcap.csv  messaging-pcap.html  offlinecapture.py  pyproject.toml  readpcap.py  registering-pcap.csv  registering-pcap.html  rephrain-1.pcap  reversedns.txt  uniqueipandmap.py  uniqueips.csv
