[tool.poetry]
name = "packetsniffing"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.17"
pandas = "1.5"
pyshark = "0.4.5"
scapy = "2.4.5"
cryptography = "37.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
